--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@clerk/nextjs": "^6.4.0",
     "@hookform/resolvers": "^3.9.1",
     "@opentelemetry/api": "^1.9.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "5.19.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -21,12 +21,16 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.4.0",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.460.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
+    "react-day-picker": "^9.4.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-spinners": "^0.14.1",
@@ -39,7 +43,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
-    "prisma": "^5.22.0",
+    "prisma": "5.19.0",
     "tailwindcss": "^3.4.1"
   }
 }
